Update index.html 5

--- a/index.html
+++ b/index.html
@@ -9,4 +9,4 @@
 <textarea id="configuration"></textarea>
 <script src="postmonger.js"></script>
 <script src="activity.js"></script> </body>
-</html><
+</html>
